--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "NODE_ENV=test node_modules/jest/bin/jest.js --verbose --silent --runInBand --forceExit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,10 +12,14 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.2"
   },
   "devDependencies": {
     "jest": "^29.2.0",
+    "sequelize-cli": "^6.5.1",
     "supertest": "^6.3.0"
   }
 }
