--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test node_modules/jest/bin/jest.js --verbose --silent --runInBand --forceExit"
+    "test": "NODE_ENV=test node_modules/jest/bin/jest.js --verbose --silent --runInBand --forceExit",
+    "lint": "npx eslint ."
+  },
+  "engines": {
+    "npm": "8.x",
+    "node": "^14"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,6 +23,8 @@
     "sequelize": "^6.25.2"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
     "jest": "^29.2.0",
     "sequelize-cli": "^6.5.1",
     "supertest": "^6.3.0"
